--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,21 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./../static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      outline: none;
+      box-sizing: border-box;
+      color: white;
+      background-image: url('https://images.pexels.com/photos/51951/forest-fire-fire-smoke-conservation-51951.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+      background-position: center;
+      background-size: cover;
+    }
+  </style>
 </head>
 
 <body>
@@ -74,9 +87,7 @@
     </form>
       </div>
 
-      <br>
-        {{pred}}<br>
-
+      <br>{{pred}}<br>
     </div>
   </div>
 
