--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,13 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./../static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <style>
+    .pred{
+      font-size:xx-large;
+    }
+  </style>
 </head>
 
 <body>
@@ -73,9 +78,9 @@
       </div>
     </form>
       </div>
-
-      <br>{{pred}}<br>
-    </div>
+      <div class="pred">
+        <br>{{pred}}<br>
+      </div>
   </div>
 
   <footer class="page-footer green">
